<resources>
    <string name="app_name">PKBL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="username">Username</string>
    <string name="welcome_to">Welcome to</string>
    <string name="pkbl">PKBL</string>
    <string name="sub_title">Aplikasi Program Kemitraan dan Bina Lingkungan</string>
    <string name="password">Password</string>
    <string name="error_login">Wrong Username or Password</string>
    <string name="sign_in_admin">Sign In Admin</string>
    <string name="sign_in_user">Sign In User</string>
    <string name="sign_up_description">Fill this form and we will send email verification</string>
    <string name="need_account">Need Account ?</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="sektor">Sektor</string>
    <string name="rka">RKA</string>
    <string name="perdagangan">Perdagangan</string>
    <string name="realisasi">Realisasi</string>
    <string name="industri">Industri</string>
    <string name="pertanian">Pertanian</string>
    <string name="peternakan">Peternakan</string>
    <string name="perkebunan">Perkebunan</string>
    <string name="perikanan">Perikanan</string>
    <string name="lainnya">Lainnya</string>
    <string name="text">Text</string>
    <string name="total">Total</string>
    <string name="indentitas_pemohon">Indentitas Pemohon</string>
    <string name="kelengkapan_survey">Kelengkapan Survey</string>
    <string name="dokumen_survey">Dokumen Survey</string>
    <string name="lorem_jpg">Lorem.jpg</string>
    <string name="dok_survey">Dok survey</string>
    <string name="lokasi_survey">Lokasi Survey</string>
    <string name="_0_0">0, 0</string>
    <string name="ubah_koordinat">Ubah Koordinat</string>
    <string name="berkas_survey">Berkas Survey</string>
    <string name="tanggal_survey">Tanggal Survey</string>
    <string name="nilai_rekomendasi">Nilai Rekomendasi</string>
    <string name="hasil_survei">Hasil Survei</string>
    <string name="alasan">Alasan</string>
    <string name="simpan">Simpan</string>
    <string name="sign_in">Sign In</string>
    <string name="upload_file">Upload File</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_chart_dashboard">Data Penyaluran %1s Per %2s %3s</string>
    <string name="penugasan_survey">Penugasan Survey %1d data</string>
    <string name="penilaian">Penilaian %1d data</string>
    <string name="persetujuan">Persetujuan %1d data</string>
    <string name="pencairan">Pencairan %1d data</string>
    <string name="selesai">Selesai %1d data</string>
    <string name="ditolak">Ditolak %1d data</string>
    <string name="place_holder_alamat">Jl kencana barat no 26 Jakarta Selatan</string>
    <string name="place_holder_nama">Andi Sofyan</string>
    <string name="hello">Hello %1s!</string>
    <string name="welcome_message">Welcome back to get started with your job</string>
    <string name="role_placeholder">Petugas</string>
    <string name="name_placeholder">John Doe</string>
    <string name="email_placeholder">johndoe@gmail.com</string>
    <string name="dashboard">Dashboard</string>
    <string name="pending_job">Pending Job</string>
    <string name="document">Document</string>
    <string name="info">Info</string>
    <string name="uncompleted_job">Uncompleted Job</string>
    <string name="view_all">View all</string>
    <string name="masuk">Masuk</string>

    <string-array name="placeholder_year">
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
    </string-array>

    <string-array name="placeholder_month">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>

</resources>
