<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff">

    <TextView
        android:visibility="invisible"
        android:id="@+id/tv_uncompleted_job"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/rubik"
        android:text="@string/uncompleted_job"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pending_job" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_uncompleted_job"
        tools:listitem="@layout/item_job" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_background"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="250dp"
            android:layout_height="160dp"
            android:background="@drawable/bg_card5"
            android:backgroundTint="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <View
            android:layout_width="180dp"
            android:layout_height="90dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_card4"
            android:backgroundTint="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="90dp"
            android:layout_height="180dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_card3"
            android:backgroundTint="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/rubik"
            android:text="@string/hello"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:text="@string/welcome_message"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/white"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <RelativeLayout
                    android:id="@+id/relative_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_profile"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/ic_launcher_round"
                        app:civ_border_color="@color/colorPrimaryDark"
                        app:civ_border_width="14dp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_role"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="62dp"
                        android:background="@drawable/bg_text"
                        android:fontFamily="@font/rubik"
                        android:gravity="center"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/role_placeholder"
                        android:textColor="@color/primaryTextColor" />
                </RelativeLayout>


                <TextView
                    android:id="@+id/tv__home_username"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_toEndOf="@id/relative_layout"
                    android:fontFamily="@font/rubik"
                    android:text="@string/name_placeholder"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv__home_username"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/relative_layout"
                    android:fontFamily="@font/rubik"
                    android:text="@string/email_placeholder" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/btn_dashboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/btn_pending_job"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardBackgroundColor="@color/primaryTextColor"
            app:cardCornerRadius="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_dashboard" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/rubik"
            android:text="@string/dashboard"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_pending_job"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/btn_document"
        app:layout_constraintStart_toEndOf="@+id/btn_dashboard"
        app:layout_constraintTop_toTopOf="@+id/btn_dashboard">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_pending_job" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:text="@string/pending_job"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="@+id/btn_pending_job"
            app:layout_constraintStart_toStartOf="@+id/btn_pending_job"
            app:layout_constraintTop_toBottomOf="@+id/btn_pending_job" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/btn_document"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/btn_info"
        app:layout_constraintStart_toEndOf="@+id/btn_pending_job"
        app:layout_constraintTop_toTopOf="@+id/btn_pending_job">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardBackgroundColor="@color/primaryTextColor"
            app:cardCornerRadius="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_document" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:text="@string/document"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/btn_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_document"
        app:layout_constraintTop_toTopOf="@+id/btn_document">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardBackgroundColor="@color/primaryTextColor"
            app:cardCornerRadius="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_info" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/rubik"
            android:gravity="center"
            android:text="@string/info"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>


    <TextView
        android:visibility="invisible"
        android:id="@+id/tv_view_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/rubik"
        android:text="@string/view_all"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_uncompleted_job" />

</androidx.constraintlayout.widget.ConstraintLayout>